--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
-    "build": "next build",
+    "build": "next build && npm run email:build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "email:dev": "email dev --dir=\"src/components/emails\"",
+    "email:build": "email build --dir=\"src/components/emails\" --pretty"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
@@ -15,6 +17,7 @@
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@react-email/components": "^0.0.36",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
@@ -37,10 +40,12 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "next": "*",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "prettier": "^3.5.3",
-    "prisma": "^6.6.0"
+    "prisma": "^6.6.0",
+    "react-email": "4.0.7"
   }
 }
