--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "email:build": "email build --dir=\"src/components/emails\""
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.6",
+    "@arcjet/next": "^1.0.0-beta.6",
     "@auth/prisma-adapter": "^2.9.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
