--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@auth/prisma-adapter": "^2.9.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^6.6.0",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-email/components": "^0.0.36",
