cron for deleting tokens 2

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
   "crons": [
     {
       "path": "/api/clean-expired-tokens",
-      "schedule": "0 5 * * *",
-      "timezone": "UTC"
+      "schedule": "0 5 * * *"
     }
   ]
 }
