--- a/package.json
+++ b/package.json
@@ -50,7 +50,11 @@
     "@types/react-dom": "^19.1.2",
     "next": "*",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.6.0",
     "react-email": "4.0.7"
+  },
+  "prettier": {
+    "plugins": ["prettier-plugin-tailwindcss"]
   }
 }
