--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@arcjet/inspect": "^1.0.0-beta.6",
     "@arcjet/next": "^1.0.0-beta.6",
     "@auth/prisma-adapter": "^2.9.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "^6.6.0",
